--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,8 +6,14 @@ edition = "2018"
 
 [dependencies]
 libc = "0.2.48"
-criterion = "0.2.10"
 rand = "0.6"
 ndarray = { version = "0.12.1", features = ["blas"] }
 blas-src = { version = "0.2.0", default-features = false, features = ["openblas"] }
 openblas-src = { version = "0.6.0", default-features = false, features = ["cblas", "system"] }
+
+[dev-dependencies]
+criterion = "0.2.10"
+
+[[bench]]
+name = "benchmark"
+harness = false
