--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ rand = "0.6"
 ndarray = { version = "0.12.1", features = ["blas"] }
 blas-src = { version = "0.2.0", default-features = false, features = ["openblas"] }
 openblas-src = { version = "0.6.0", default-features = false, features = ["cblas", "system"] }
-matrixmultiply = "0.2.2"
+rayon = "1.0.3"
 
 [dev-dependencies]
 criterion = "0.2.10"
