--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,10 @@ rust:
 
 cache: cargo
 
+before_install:
+  - sudo apt-get update
+  - sudo apt-get install -y gfortran libopenblas-dev
+
 script:
   - cargo build --verbose
-  - cargo test
+  - cargo test --verbose
