--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,8 @@ rand = "0.6"
 ndarray = { version = "0.12.1", features = ["blas"] }
 blas-src = { version = "0.2.0", default-features = false, features = ["openblas"] }
 openblas-src = { version = "0.6.0", default-features = false, features = ["cblas", "system"] }
-matrixmultiply = "0.2.2"
+rayon = "1.0.3"
+num_cpus = "1.10.0"
 
 [dev-dependencies]
 criterion = "0.2.10"
@@ -23,3 +24,6 @@ path = "src/lib/mod.rs"
 name = "benchmark"
 harness = false
 
+[[bench]]
+name = "parallel"
+harness = false
